# kubevirt

./: Makefile  WORKSPACE  cm.yaml  dv.yaml  go.mod  go.sum  go.work  go.work.sum  push_images.sh  pvc.yaml  pvc2.yaml  test.json  vmi.yaml
api/openapi-spec/: swagger.json
cluster-up/: up.sh
cluster-up/hack/: common.sh
cmd/nlh-cli/: BUILD.bazel  nlh-cli.go
cmd/virt-exportserver/: virt-exportserver.go
cmd/virt-handler/: BUILD.bazel  virt-handler.go
hack/: cluster-up.sh  functests.sh  gen-proto.sh  generate.sh  kwok-cluster-up.sh  kwok-perftests.sh  kwok.sh
hack/builder/: Dockerfile  Dockerfile.cs10
hack/nlh-client/: BUILD.bazel  main.go
kubevirtci/cluster-up/cluster/: ephemeral-provider-common.sh
kubevirtci/cluster-up/cluster/kind/: common.sh
kubevirtci/cluster-up/cluster/kind-1.35-vfio-gpu/: README.md  config_vfio_cluster.sh  install_dra_example_driver.sh  kind.yaml  provider.sh  setup-fake-pci-host.sh  setup-host-vfio-pci.sh
kubevirtci/cluster-up/cluster/kind-1.35-vfio-gpu/fake-iommu/: compat.h  fake-iommu.c
kubevirtci/cluster-up/cluster/kind-1.35-vfio-gpu/fake-pci/: compat.h  fake-pci.c
kubevirtci/cluster-up/cluster/kind-1.35-vgpu/: provider.sh  setup-fake-pci-host.sh
kubevirtci/cluster-up/cluster/kind-1.35-vgpu/fake-iommu/: Makefile  README.md  compat.h  fake-iommu.c
kubevirtci/cluster-up/cluster/kind-1.35-vgpu/fake-nvidia-pci/: Makefile  README.md  compat.h  fake-nvidia-pci.c
kubevirtci/cluster-up/cluster/kind-1.35-vgpu/fake-nvidia-vgpu/: README.md
pkg/controller/: BUILD.bazel  controller.go  virtinformers.go
pkg/dra/: BUILD.bazel  utils.go  utils_test.go
pkg/handler-launcher-com/cmd/v1/: cmd.pb.go
pkg/libvmi/: selector.go  vm.go  vmi.go
pkg/monitoring/metrics/common/client/: rt_wrapper.go
pkg/storage/admitters/: storagehotplug.go
pkg/storage/export/virt-exportserver/: exportserver.go
pkg/storage/types/: volume.go
pkg/util/openapi/: openapi.go
pkg/virt-api/rest/: volumes.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  vmpool-admitter.go  vmpool-admitter_test.go
pkg/virt-config/: feature-gates.go
pkg/virt-config/featuregate/: active.go
pkg/virt-controller/watch/: BUILD.bazel  application.go  application_test.go
pkg/virt-controller/watch/pool/: BUILD.bazel  pool.go  pool_test.go
pkg/virt-controller/watch/vmi/: lifecycle.go  storage.go  volume-hotplug.go
pkg/virt-handler/: vm.go
pkg/virt-handler/cache/: cache.go
pkg/virt-handler/node-local-hotplug/: BUILD.bazel  FLOW.md  config.go  csi_volume_manager.go  errors.go  mounter.go  patcher.go  publish.go  server.go  service.go  validator.go  volume_manager.go  volume_resolver.go
pkg/virt-handler/node-local-hotplug/server/: csi_pvc_volume.go  csi_volume_manager.go  publish.go  server.go  volume_resolver.go
pkg/virt-handler/node-local-hotplug/v1/: BUILD.bazel  nodelocalhotplug.pb.go  nodelocalhotplug.proto
pkg/virt-launcher/virtwrap/: manager.go
pkg/virt-launcher/virtwrap/converter/: converter.go
pkg/virt-launcher/virtwrap/device/hostdevice/dra/: BUILD.bazel  generic_hostdev_test.go  gpu_hostdev_test.go
pkg/virt-launcher/virtwrap/device/hostdevice/sriov/: BUILD.bazel  hostdev_test.go
pkg/virt-operator/resource/apply/: apps_test.go  reconcile_test.go
pkg/virt-operator/resource/generate/components/: crds.go  validations_generated.go
pkg/virt-operator/resource/generate/rbac/: handler.go
staging/src/kubevirt.io/api/: go.mod  go.sum
staging/src/kubevirt.io/api/apitesting/roundtrip/: compatibility.go
staging/src/kubevirt.io/api/core/v1/: deepcopy_generated.go  schema.go  schema_swagger_generated.go  types.go  types_swagger_generated.go
staging/src/kubevirt.io/api/pool/v1alpha1/: deepcopy_generated.go  types.go  types_swagger_generated.go
staging/src/kubevirt.io/api/roundtrip/: BUILD.bazel
staging/src/kubevirt.io/api/testdata/: README.md
staging/src/kubevirt.io/client-go/: go.mod  go.sum
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
staging/src/kubevirt.io/client-go/kubecli/: generated_mock_kubevirt.go
tests/: BUILD.bazel  dra_test.go  mdev_configuration_allocation_test.go  pool_test.go  tests_suite_test.go  vm_test.go
tests/compute/: BUILD.bazel  dra.go
tests/decorators/: decorators.go
tests/flags/: flags.go
tests/infrastructure/: k8s-client-changes.go  prometheus.go
tests/performance/: BUILD.bazel  README.md  density-kwok.go  framework.go
tests/performance/manifests/kwok/: kustomization.yaml
tests/performance/manifests/kwok/rbac/: kustomization.yaml  role-binding.yaml  role.yaml
tests/performance/manifests/kwok/stage/: kustomization.yaml  vmi-delete.yaml  vmi-ready.yaml
tests/storage/: hotplug.go  storage.go
tests/testsuite/: fixture.go  namespace.go
tools/perfscale-audit/api/: api.go
tools/perfscale-audit/metric-client/: metric-client.go
tools/vms-generator/: BUILD.bazel  vms-generator.go
tools/vms-generator/utils/: BUILD.bazel  utils.go
(+15 files in other folders)
